--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 # User-specific files
+#sb added
+*.dll
+
+
 *.rsuser
 *.suo
 *.user
