update resource files

--- a/shetran-prepare-snow/prepare/Resource1.rc
+++ b/shetran-prepare-snow/prepare/Resource1.rc
@@ -87,7 +87,7 @@ BEGIN
         BLOCK "080904b0"
         BEGIN
             VALUE "CompanyName", "Newcastle University"
-            VALUE "FileDescription", "Uses library file and map files to produce Shetran inputs with snow"
+            VALUE "FileDescription", "Produce Shetran inputs with snow"
             VALUE "FileVersion", "2.2.11.0"
             VALUE "InternalName", "Resource1.rc"
             VALUE "LegalCopyright", "Copyright (C) 2020"
