--- a/shetran-prepare-snow/prepare/Resource1.rc
+++ b/shetran-prepare-snow/prepare/Resource1.rc
@@ -100,13 +100,13 @@ BEGIN
         BLOCK "080904b0"
         BEGIN
             VALUE "CompanyName", "Newcastle University"
-            VALUE "FileDescription", "Produce Shetran inputs with snow"
-            VALUE "FileVersion", "2.3.1.1"
+            VALUE "FileDescription", "Make Shetran inputs with snow STR-R-50"
+            VALUE "FileVersion", "2.3.1.3"
             VALUE "InternalName", "Resource1.rc"
             VALUE "LegalCopyright", "Copyright (C) 2020"
             VALUE "OriginalFilename", "Resource1.rc"
             VALUE "ProductName", "shetran-prepare-snow"
-            VALUE "ProductVersion", "2.3.1.1"
+            VALUE "ProductVersion", "2.3.1.3"
         END
     END
     BLOCK "VarFileInfo"
