--- a/shetran-prepare-sediment/prepare/Resource1.rc
+++ b/shetran-prepare-sediment/prepare/Resource1.rc
@@ -83,8 +83,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 2,3,1,1
- PRODUCTVERSION 2,3,1,1
+ FILEVERSION 2,3,1,3
+ PRODUCTVERSION 2,3,1,3
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -100,13 +100,13 @@ BEGIN
         BLOCK "080904b0"
         BEGIN
             VALUE "CompanyName", "Newcastle Unviersity"
-            VALUE "FileDescription", "Produce Shetran inputs including sediment"
-            VALUE "FileVersion", "2.3.1.1"
+            VALUE "FileDescription", "Shetran inputs include sediment STR-R-50"
+            VALUE "FileVersion", "2.3.1.3"
             VALUE "InternalName", "Resource1.rc"
             VALUE "LegalCopyright", "Copyright (C) 2020"
             VALUE "OriginalFilename", "Resource1.rc"
             VALUE "ProductName", "shetran-prepare-sediment"
-            VALUE "ProductVersion", "2.3.1.1"
+            VALUE "ProductVersion", "2.3.1.3"
         END
     END
     BLOCK "VarFileInfo"
